--- a/src/styles/home/home-header.scss
+++ b/src/styles/home/home-header.scss
@@ -4,10 +4,8 @@
 .home-header {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 20rem fit-content;
-    place-content: center;
-    height: fit-content;
-    padding: 2.5rem 0;
+    grid-template-rows: 20rem 1fr;
+    margin-top: 5rem;
 
     @media (width >= $mobile-width) {
         grid-template-columns: auto 1fr;
