--- a/src/styles/home/grid-table.scss
+++ b/src/styles/home/grid-table.scss
@@ -8,7 +8,7 @@
 
     @media (width >= $mobile-width) {
 
-        height: 100vh;
+        height: fit-content;
         display: flex;
         align-items: center;
         justify-content: space-between;
