Modify: the typing text animtion

--- a/src/styles/home/_index.scss
+++ b/src/styles/home/_index.scss
@@ -2,7 +2,7 @@
 @use "../variables" as *;
 @use "home-header";
 @use "full-name";
-@use "profetion";
+@use "typing-text";
 @use "profile-picture";
 @use "grid-table";
 @use "grid-card";
