Modify: the home page grid cards font

--- a/src/styles/home/grid-card.scss
+++ b/src/styles/home/grid-card.scss
@@ -55,6 +55,7 @@
         display: grid;
         place-items: center;
         font-size: 2rem;
+        font-weight: bold;
         position: relative;
         color: var(--white-color);
         z-index: 1;
